fixup: stop using leavingMemberIds for static member replacement
Instead, identify the replaced member by instance id.